--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,16 @@ body{
     padding-top: 0;
     padding-bottom: 2rem;
 }
+.section--second{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section--second canvas{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .card{
     background: #eee;
     height: 50%;
@@ -55,3 +65,24 @@ body{
     box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);     
 }
 
+@media screen and (max-width: 87.5rem) {
+    .dashboard{
+        grid-template-columns: repeat(12,20rem);
+        height: auto;
+        gap: 2rem;
+    }
+    .section--first{
+        grid-column: 1/-1;
+        grid-row: 1/7;
+        padding: 0;
+        padding-bottom: 2rem;
+        padding-right: 0;
+    }
+    .card{
+        flex-grow: 1;
+    }
+    .section--second{
+        grid-column: 1/7;
+        grid-row: 8/13;
+    }
+}
